horizontal scroll fixed

--- a/style1.css
+++ b/style1.css
@@ -1483,9 +1483,9 @@ input::placeholder {
         font-size: 13px;
     }
 
-    .logo-column {
+    /* .logo-column {
         margin-left: 10px;
-    }
+    } */
 }
 
 /* footer */
